--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>VISHNUDAS | Your Tech Partner</title>
     <link rel="stylesheet"  type=text/css href="asset/css/style.css">
     <link href="asset/css/all.css" rel="stylesheet"> 
+    <link rel="icon" href="asset/img/logo.png">
 </head>
 <body>
     <div class="main">
